<project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>ru.job4j</groupId>
    <artifactId>junior</artifactId>
    <packaging>pom</packaging>
    <version>2.0</version>
     <name>junior</name>
     <url>http://job4j.ru/</url>

    <properties>
       <maven.compiler.source>12</maven.compiler.source>
       <maven.compiler.target>12</maven.compiler.target>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
	 
	 <dependencies>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

		 <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
		 <dependency>
			 <groupId>org.openjfx</groupId>
			 <artifactId>javafx-fxml</artifactId>
			 <version>12</version>
		 </dependency>

		 <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-graphics -->
		 <dependency>
			 <groupId>org.openjfx</groupId>
			 <artifactId>javafx-graphics</artifactId>
			 <version>12</version>
		 </dependency>

		 <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-base -->
		 <dependency>
			 <groupId>org.openjfx</groupId>
			 <artifactId>javafx-base</artifactId>
			 <version>12</version>
		 </dependency>

		 <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
		 <dependency>
			 <groupId>org.openjfx</groupId>
			 <artifactId>javafx-controls</artifactId>
			 <version>12</version>
		 </dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.17</version>
				<executions>
					<execution>
						<id>validate</id>
						<phase>validate</phase>
						<configuration>
							<configLocation>checkstyle.xml</configLocation>
							<encoding>UTF-8</encoding>
							<consoleOutput>true</consoleOutput>
							<failsOnError>true</failsOnError>
							<includeTestSourceDirectory>true</includeTestSourceDirectory>
						</configuration>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.7.9</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build> 

    <modules>
       <module>chapter_001</module>
        <module>chapter_002</module>
        <module>chapter_003</module>
		<module>chapter_004</module>
    </modules>
</project>